--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    namespace 'com.homex.open_mail_app'
+    namespace "com.homex.open_mail_app"
     compileSdkVersion 31
 
     sourceSets {
